Added Github Pages

--- a/index.html
+++ b/index.html
@@ -56,5 +56,5 @@
       <a href="https://medium.com/@blaauwkoen" class="medium soclink"><img src="img/social/Medium.png"></a>
       <a href="https://www.linkedin.com/in/blaauwkoen/" class="linkedin soclink"><img src="img/social/LinkedIN.png"></a>
      </div></div></div>
-    </div></div>
+    </div></div>Deze site is gehost op <a href="https://pages.github.com/">Github Pages</a>
 </div></body>
