--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <div class="row card no-gutters">
-        <div class="col-sm-6"><img src="img/avatar.jpg" class="avatar"><div class="names"><h1>Koen Blaauw.</h1><h3 class="date">8 november 2003</h3></div></div>
+        <div class="col-sm-6"><img src="img/avatar.jpg" class="avatar"><div class="names"><h1>Koen Blaauw</h1><h3 class="date">8 november 2003</h3></div></div>
   <div class="col-sm-6"><div class="titles">
 <div class="onderwijs up"><h4>ONDERWIJS</h4><div class="row no-gutters">
     <div class="col-7 title">OBS Binnenstad</div>
@@ -56,5 +56,5 @@
       <a href="https://medium.com/@blaauwkoen" class="medium soclink"><img src="img/social/Medium.png"></a>
       <a href="https://www.linkedin.com/in/blaauwkoen/" class="linkedin soclink"><img src="img/social/LinkedIN.png"></a>
      </div></div></div>
-    </div></div>
+    Deze pagina is gehost met Github Pages</div></div>
 </div></body>
