--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
       <a href="https://facebook.com/blaauwkoen" class="facebook soclink"><img src="img/social/Facebook.png"></a>
       <a href="https://medium.com/@blaauwkoen" class="medium soclink"><img src="img/social/Medium.png"></a>
       <a href="https://www.linkedin.com/in/blaauwkoen/" class="linkedin soclink"><img src="img/social/LinkedIN.png"></a>
-     </div></div></div>
-    Deze pagina is gehost met Github Pages</div></div>
+     </div></div>  Deze pagina is gehost met Github Pages</div>
+  </div></div>
 </div></body>
