--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <link href="css/style.css" type="text/css" rel="stylesheet">
 <link href="css/bootstrap-grid.css" type="text/css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:600,600i,700" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-101873025-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 
