Added the last playing feature

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
 </div><div class="row no-gutters">
     <div class="col-1 title">🇬🇧</div>
     <div class="col-10 title">Vloeiend</div>
-    
+    <div class="onderwijs up"><h4>AAN HET LUISTEREN NAAR</h4><div class="row no-gutters">
+    <div class="col-7 title"><a class="cover-container" href="#" target="_blank">
+            <p class="artist-track">
+                <span class="track"></span>
+                </p></a></div>
+    <div class="col-4 italic"><i><span class="artist"></span></i></div>
+</div></div>
 </div></div><div class="mail up"><h4>MAIL</h4><div class="row no-gutters">
   <div class="col-12 title"><a href="mailto:ikben@ko3n.nl" class="mail">ikben@ko3n.nl</a></div>
 </div></div>
@@ -66,6 +72,8 @@
       <a href="https://facebook.com/blaauwkoen" class="facebook soclink"><img src="img/social/Facebook.png"></a>
       <a href="https://medium.com/@blaauwkoen" class="medium soclink"><img src="img/social/Medium.png"></a>
       <a href="https://www.linkedin.com/in/blaauwkoen/" class="linkedin soclink"><img src="img/social/LinkedIN.png"></a>
+      <a href="https://www.spotify.com/user/blaauwkoen" class="spotify soclink"><img src="img/social/Spotify.png"></a>
+       <a href="https://www.last.fm/user/blaauwkoen" class="lastfm soclink"><img src="img/social/Lastfm.png"></a>
      </div></div></div>
   </div></div>
 </div></body>
