Added script files

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <title>Koen Blaauw</title>
 <link href="css/style.css" type="text/css" rel="stylesheet">
 <link href="css/bootstrap-grid.css" type="text/css" rel="stylesheet">
+<script src="js/lastfm.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:600,600i,700" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script>
@@ -66,14 +68,14 @@
 </div></div>
       
       <div class="social up"><h4>SOCIAL MEDIA</h4><div class="row no-gutters socials">
-  <div class="col-12 title"><a href="https://instagram.com/bomenjongen" class="insta soclink"><img src="img/social/Instagram.png"></a>
-      <a href="https://twitter.com/blaauwkoen1" class="insta soclink"><img src="img/social/Twitter.png"></a>
-      <a href="https://snapchat.com/add/blaauwkoen" class="twitter soclink"><img src="img/social/Snapchat.png"></a>
-      <a href="https://facebook.com/blaauwkoen" class="facebook soclink"><img src="img/social/Facebook.png"></a>
-      <a href="https://medium.com/@blaauwkoen" class="medium soclink"><img src="img/social/Medium.png"></a>
-      <a href="https://www.linkedin.com/in/blaauwkoen/" class="linkedin soclink"><img src="img/social/LinkedIN.png"></a>
-      <a href="https://www.spotify.com/user/blaauwkoen" class="spotify soclink"><img src="img/social/Spotify.png"></a>
-       <a href="https://www.last.fm/user/blaauwkoen" class="lastfm soclink"><img src="img/social/Lastfm.png"></a>
+  <div class="col-12 title"><a href="https://instagram.com/bomenjongen" class="insta soclink"><img class="soclink" src="img/social/Instagram.png"></a>
+      <a href="https://twitter.com/blaauwkoen1" class="insta soclink"><img class="soclink" src="img/social/Twitter.png"></a>
+      <a href="https://snapchat.com/add/blaauwkoen" class="twitter soclink"><img class="soclink" src="img/social/Snapchat.png"></a>
+      <a href="https://facebook.com/blaauwkoen" class="facebook soclink"><img class="soclink" src="img/social/Facebook.png"></a>
+      <a href="https://medium.com/@blaauwkoen" class="medium soclink"><img class="soclink" src="img/social/Medium.png"></a>
+      <a href="https://www.linkedin.com/in/blaauwkoen/" class="linkedin soclink"><img class="soclink" src="img/social/LinkedIN.png"></a>
+      <a href="https://www.spotify.com/user/blaauwkoen" class="spotify soclink"><img class="soclink" src="img/social/Spotify.png"></a>
+       <a href="https://www.last.fm/user/blaauwkoen" class="lastfm soclink"><img class="soclink" src="img/social/Lastfm.png"></a>
      </div></div></div>
   </div></div>
 </div></body>
