--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Koen Blaauw</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href="https://daks2k3a4ib2z.cloudfront.net/59e623b8635fbe000117b486/css/ko3n.webflow.33447b4e5.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+	<link href="style.css" rel="stylesheet" type="text/css"><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
 </head>
 <body class="body">
 	<div class="section">
