Added menu links

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 			13 year old designer</h1>
 			<div class="w-row">
 				<div class="column-2 w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a class="link-block w-inline-block" data-ix="hovr" href="#" style="transition: opacity 200ms; opacity: 1;">
+					<a class="link-block w-inline-block" data-ix="hovr" href="/about.html" style="transition: opacity 200ms; opacity: 1;">
 					<h3 class="heading-2">About</h3></a>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a class="link-block w-inline-block" data-ix="hovr" href="#">
+					<a class="link-block w-inline-block" data-ix="hovr" href="/work.html">
 					<h3 class="heading-2">Work</h3></a>
 				</div>
 				<div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
-					<a class="link-block w-inline-block" data-ix="hovr" href="#" style="transition: opacity 200ms; opacity: 1;">
+					<a class="link-block w-inline-block" data-ix="hovr" href="/contact.html" style="transition: opacity 200ms; opacity: 1;">
 					<h3 class="heading-2">Contact</h3></a>
 				</div>
 			</div>
